# scout-advancement

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  advancement_processor.py  generate_labels_pdf.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
packaging/: icon.icns  scout_labels.spec
sample_data/: PO_P2001FP_2000001.csv  PO_P2045FP_2000002.csv
scripts/: build.ps1  build.sh  fetch_adventures.py
src/: main.py  version.py
src/core/: adventure_data.py  bagging_guide.py  csv_validator.py  inventory.py  label_generator.py  label_spec.py
src/gui/: file_list_widget.py  inventory_dialogs.py  inventory_widget.py  label_preview.py  label_settings.py  main_window.py
tests/: test_adventure_data.py  test_bagging_guide.py  test_csv_validator.py  test_inventory.py  test_label_generator.py  test_label_preview.py  test_label_spec.py
