[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-advancement"
dynamic = ["version"]
description = "Scout advancement label generator — CSV to printable Avery 6427 labels"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.19.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "python-semantic-release>=9.0",
]

[project.scripts]
scout-labels = "src.main:main"

[tool.setuptools.dynamic]
version = {attr = "src.version.__version__"}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.semantic_release]
version_toml = []
version_variables = ["src/version.py:__version__"]
branch = "main"
major_on_zero = false
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "test", "chore", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
